--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}">
+    </head>
+<body>
+    <!-- content --> 
+</body>
+</html>
