--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,3 +1,7 @@
-#test {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+#header {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #89CFF0;
+    border-radius: 30px;
+    text-align: center;
+    padding: 1%;
 }
