--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 id="test">Hi, {{ user.username }}!</h1>
+    <h1 id="header">Hi, {{ user.username }}!</h1>
     {% for post in posts %}
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
