--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,7 +1,17 @@
 #header {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Barlow Condensed", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 100%;
     background-color: #89CFF0;
     border-radius: 30px;
     text-align: center;
     padding: 1%;
+}
+
+body {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 100%
 }
