--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,4 +1,4 @@
-#header {
+#main-header {
     font-family: "Barlow Condensed", sans-serif;
     font-weight: 600;
     font-style: normal;
@@ -14,4 +14,60 @@ body {
     font-weight: 400;
     font-style: normal;
     font-size: 100%
+}
+
+.chat-container {
+    padding-top: 25%;
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    max-width: 800px;
+    margin-top: 20px;
+    gap: 100px;
+}
+
+.output-box {
+    flex: 1;
+    background-color: #ffffff;
+    margin-top: 120px;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    max-height: 200px;
+    font-size: 1.1em;
+    color: #333;
+    visibility: visible;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+    width: 200px;
+}
+
+#inputBox {
+    width: 100%;
+    padding: 10px;
+    font-size: 1em;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 1em;
+    color: #ffffff;
+    background-color: #89CFF0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #77b5d9;
 }
