--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 id="header" style="font-size: 6vw">Sign In</h1>
-    <form action="" method="post" novalidate>
+    <h1 id="main-header" style="font-size: 6vw">Sign In</h1>
+
+    <!-- <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
@@ -14,5 +15,13 @@
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
-    </form>
+    </form> -->
+
+    <div class="chat-container">
+        <!-- Input area -->
+        <div id="inputContainer" class="input-container">
+          <input type="text" id="inputBox" placeholder="Username">
+          <!-- <button onclick="send_message()">Send</button> -->
+        </div>
+      </div>
 {% endblock %}
