--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,10 @@
             Nexus: 
             <a href="/home">Home</a>
             <a href="/login">Sign In</a>
+            <a href="/privacy">Privacy</a>
+            <a href="/blog">Blog</a>
+            <a href="/nexus-online">Nexus Online</a>
+            <a href="/contact-us">Contact Us</a>
         </div>
         <hr> <!-- divider line -->
         {% block content %}{% endblock %}
