--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,9 +20,8 @@
         {% endif %}
     </head>
     <body>
-        <div>
+        <div style="text-align: center;">
             <!-- nav bar at top -->
-            Nexus: 
             <a href="/home">Home</a>
             <a href="/login">Sign In</a>
             <a href="/privacy">Privacy</a>
@@ -30,7 +29,7 @@
             <a href="/nexus-online">Nexus Online</a>
             <a href="/contact-us">Contact Us</a>
         </div>
-        <hr> <!-- divider line -->
-        {% block content %}{% endblock %}
+        <hr style="margin-bottom: 0 auto; margin-top: 10px;"> <!-- divider line -->
+        {% block content %}{% endblock %} <!-- rest of page content -->
     </body>
 </html>
