--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
         
         <!-- importing css style sheet -->
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/base.css') }}">
+        {% block extraheader %}{% endblock extraheader %}
 
         {% if title %}
         <title>{{ title }} - Nexus</title>
@@ -20,7 +21,7 @@
         {% endif %}
     </head>
     <body>
-        <div style="text-align: center;">
+        <div id="nav-bar">
             <!-- nav bar at top -->
             <a href="/home">Home</a>
             <a href="/login">Sign In</a>
@@ -30,6 +31,6 @@
             <a href="/contact-us">Contact Us</a>
         </div>
         <hr style="margin-bottom: 0 auto; margin-top: 10px;"> <!-- divider line -->
-        {% block content %}{% endblock %} <!-- rest of page content -->
+        {% block content %}{% endblock content %} <!-- rest of page content -->
     </body>
 </html>
