--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,4 +5,4 @@
     {% for message in messages %}
     <div><p>{{ message.author.username }} says: <b>{{ message.body }}</b></p></div> <!-- displaying all messages -->
     {% endfor %}
-{% endblock %}
+{% endblock content %}
