--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -19,5 +19,7 @@ body {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 100%
+    font-size: 100%;
+    padding: 0;
+    margin: 0;
 }
