--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         
         <!-- importing css style sheet -->
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/base.css') }}">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/base.css') }}">
         {% block extraheader %}{% endblock extraheader %}
 
         {% if title %}
@@ -23,14 +23,25 @@
     <body>
         <div id="nav-bar">
             <!-- nav bar at top -->
-            <a href="/home">Home</a>
-            <a href="/login">Sign In</a>
-            <a href="/privacy">Privacy</a>
-            <a href="/blog">Blog</a>
-            <a href="/nexus-online">Nexus Online</a>
-            <a href="/contact-us">Contact Us</a>
+            <a href="{{url_for ('home') }}">Home</a>
+            <a href="{{url_for ('login') }}">Sign In</a>
+            <a href="{{url_for ('privacy') }}">Privacy</a>
+            <a href="{{url_for ('blog') }}">Blog</a>
+            <a href="{{url_for ('nexus_online') }}">Nexus Online</a>
+            <a href="{{url_for ('contact_us') }}">Contact Us</a>
         </div>
         <hr style="margin-bottom: 0 auto; margin-top: 10px;"> <!-- divider line -->
+        
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+
         {% block content %}{% endblock content %} <!-- rest of page content -->
     </body>
 </html>
