--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,31 +1,38 @@
 {% extends "base.html" %}
 
 {% block extraheader %}
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}">
 {% endblock extraheader %}
 
 {% block content %}
-    <h1 id="main-header" style="font-size: 6vw">Sign In to Nexus</h1>
+<h1 id="main-header" style="font-size: 6vw">Sign In to Nexus</h1>
 
+<div class="formwrapper">
+    <div class="loginform" style="justify-items: center; justify-content: center;">
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <div class="chat-container">
-            <!-- {{ form.username.label}}<br> -->
-            {{ form.username(class="input-box", placeholder="Username") }}
-    
-            <!-- {{ form.password.label }}<br> -->
-            {{ form.password(class="input-box", placeholder="Password") }}
+
+        <div class="fielditem">
+            {{ form.username(placeholder="Username") }}
+            <!-- {{ form.username }} -->
+
+            {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </div>
+
+        <div class="fielditem">
+            {{ form.password(placeholder="Password") }}
+            <!-- {{ form.password }} -->
+
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
-
-    <!-- <div class="chat-container" style="width: 100vw;"> -->
-        <!-- Input area -->
-        <!-- <input type="text" id="input-box" placeholder="Username">
-        <input type="password" id="input-box" placeholder="Password">
     </div>
-    <div class="button-container">
-        <button>Sign In</button>
-      </div>  -->
+</div>
 {% endblock content %}
