--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,8 +1,8 @@
-#main-header {
+h1 {
     font-family: "Barlow Condensed", sans-serif;
     font-weight: 600;
     font-style: normal;
-    font-size: 100%;
+    font-size: 6vw;
     background-color: #89CFF0;
     border-radius: 30px;
     text-align: center;
