--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 style="font-size: 6vw">Welcome to Nexus, {{ user.username }}!</h1> <!-- header message -->
+<h1>Welcome to Nexus, {{ user.username }}!</h1> <!-- header message -->
 {% for message in messages %}
 <div><p>{{ message.author.username }} says: <b>{{ message.body }}</b></p></div> <!-- displaying all messages -->
 {% endfor %}
