--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
 {% endblock extraheader %}
 
 {% block content %}
-<h1 style="font-size: 6vw">Sign In to Nexus</h1>
+<h1>Sign In to Nexus</h1>
 
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
