--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,12 +23,12 @@
     <body>
         <div id="nav-bar">
             <!-- nav bar at top -->
-            <a href="{{url_for ('home') }}">Home</a>
-            <a href="{{url_for ('login') }}">Sign In</a>
-            <a href="{{url_for ('privacy') }}">Privacy</a>
-            <a href="{{url_for ('blog') }}">Blog</a>
-            <a href="{{url_for ('nexus_online') }}">Nexus Online</a>
-            <a href="{{url_for ('contact_us') }}">Contact Us</a>
+            <a id="nav-button" href="{{url_for ('home') }}">Home</a>
+            <a id="nav-button" href="{{url_for ('login') }}">Sign In</a>
+            <a id="nav-button" href="{{url_for ('privacy') }}">Privacy</a>
+            <a id="nav-button" href="{{url_for ('blog') }}">Blog</a>
+            <a id="nav-button" href="{{url_for ('nexus_online') }}">Nexus Online</a>
+            <a id="nav-button" href="{{url_for ('contact_us') }}">Contact Us</a>
         </div>
         <hr style="margin-bottom: 0 auto; margin-top: 10px;"> <!-- divider line -->
         
