--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -8,11 +8,25 @@ h1 {
     text-align: center;
     padding: 1%;
     margin-top: 0;
-    /* margin-bottom: 1%; */
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 #nav-bar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1%;
+}
+
+#nav-button {
     text-align: center;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    padding: 3px;
+
 }
 
 body {
