--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Welcome to Nexus, {{ user.username }}!</h1> <!-- header message -->
-{% for message in messages %}
-<div><p>{{ message.author.username }} says: <b>{{ message.body }}</b></p></div> <!-- displaying all messages -->
-{% endfor %}
-{% endblock content %}
+<h1>Nexus - Messaging made <span class="text-emphasis">simpler</span></h1> <!-- header message -->
+{% endblock content%}
