--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,27 +8,28 @@
 <h1>Sign In to Nexus</h1>
 
 <form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
+    {{ form.hidden_tag() }} <!-- security: csurf protection -->
 
-    <div class="fielditem">
+    <div>
         {{ form.username(placeholder="Username") }}
-        <!-- {{ form.username }} -->
 
         {% for error in form.username.errors %}
         <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </div>
 
-    <div class="fielditem">
+    <div>
         {{ form.password(placeholder="Password") }}
-        <!-- {{ form.password }} -->
 
         {% for error in form.password.errors %}
         <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </div>
 
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+    <div class="toggle-switch-container">
+        {{ form.remember_me() }} {{ form.remember_me.label }}
+    </div>
+
     <p>{{ form.submit() }}</p>
 </form>
 
