--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
         {% endif %}
     </head>
     <body>
+        <p id="background"></p>
         <div id="nav-bar">
             <!-- nav bar at top -->
             <a class="nav-button" href="{{url_for ('home') }}">Home</a>
