--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Nexus - Messaging made <span class="text-emphasis">simpler</span></h1> <!-- header message -->
+<h1><span class="text-emphasis">Nexus.</span><span class="text-background"><br>
+    Messaging made more</span> simple.</h1> <!-- header message -->
 {% endblock content%}
