--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -4,24 +4,44 @@
     --accent-color-darker: #7D9FF0;
     --border-color: #9e9e9e;
     --primary-font-color: #ffffff;
-    --background-colour: #3b3b3b;
+    --secondary-font-color: #acacac;
+    --background-color: #3b3b3b;
+    --background-gradient: linear-gradient(to top, rgba(137,191,240,1) 0%, rgba(59,59,59,1) 100%);
     --button-hover-color: #5a5946;
-    --rounding: 20px;
+    --rounding: 10px;
     --font-body: "Outfit", sans-serif;
 }
+
+#background {
+    background: var(--background-gradient);
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: -1;
+    margin-top: -5px;
+    padding: 0;
+    background-size: cover;
+  }
 
 h1 {
     font-family: "Inter", serif;
     font-weight: 600;
-    text-align: center;
+    text-align: left;
     margin-top: 0;
     margin-left: 1%;
     margin-right: 1%;
-    font-size: 96px;
+    font-size: min(12.5vh, 10vw);
+    letter-spacing: -2px;
 }
 
 .text-emphasis {
-    color: var(--accent-color)
+    color: var(--accent-color);
+    font-size: min(12.5vh, 10vw);
+}
+
+.text-background {
+    color: var(--secondary-font-color);
+    font-size: min(12.5vh, 10vw);
 }
 
 body {
@@ -32,7 +52,7 @@ body {
     padding: 0;
     margin: 0;
     color: var(--primary-font-color);
-    background-color: var(--background-colour);
+    /* background-color: var(--background-colour); */
 }
 
 #nav-bar {
@@ -44,16 +64,13 @@ body {
     margin-bottom: 0;
     background-color: var(--accent-color);
     border-radius: 20px;
-    padding-bottom: 3vh;
-    height: auto;
-    font-size: auto;
+    padding-bottom: auto;
     margin-left: 1%;
     margin-right: 1%;
 }
 
 .nav-button {
     text-align: center;
-    /* border: solid var(--border-color); */
     border-radius: 8px;
     padding-left: 10px;
     padding-right: 10px;
@@ -61,14 +78,14 @@ body {
     padding-bottom: 3px;
     color: inherit;
     text-decoration: inherit;
-    background-color: var(--accent-color-2);
+    background-color: var(--accent-color);
     transition: 0.4s ease;
     margin: 1vw;
-    font-size: 32px;
+    font-size: 20px;
 
 }
 
 .nav-button:hover {
-    /* background-color: #9bf8d9; */
-    background-color: var(--accent-color);
+    background-color: var(--accent-color-darker);
+    inset: bottom var(--button-hover-color)
 }
