--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,14 +7,18 @@
 {% block content %}
 <h1> <!-- header message -->
 <div class="text-emphasis">Nexus.</div>
-<div id="title-container">Messaging made more
-    <div id="word-container">
-        <div id=scroll-text>
-            &nbsp<br>
-            &nbspsecure.<br>
-            &nbspsimple.<br>
-            &nbspsmart.<br>
-            .
+<div id="title-container">
+    Messaging&nbsp<div id="word-container">made&nbsp</div>
+    <div id="sub-word-container">
+        <div id="word-container">more</div>
+        <div id="scroll-word-container">
+            <div id=scroll-text>
+                &nbsp<br>
+                &nbspsecure.<br>
+                &nbspsimple.<br>
+                &nbspsmart.<br>
+                .
+            </div>
         </div>
     </div>
 </div>
