--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -1,16 +1,32 @@
 #title-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: left;
     justify-content: left;
 
     color: var(--secondary-font-color);
     font-size: min(12.5vh, 10vw);
     max-width: 100vw;
-    border: solid black;
+    row-gap: 0px;
 }
 
 #word-container {
+  height: 100px;
+  flex-wrap: wrap;
+  row-gap: 0px;
+}
+
+#sub-word-container {
+  display: flex;
+  flex-direction: row;
+  max-width: fit-content;
+  height: 100px;
+  flex-wrap: wrap;
+  row-gap: 0px;
+}
+
+#scroll-word-container {
     height: 100px;
     color: white;
     overflow: hidden;
@@ -26,11 +42,11 @@
     -webkit-transform: translateY(0%);
     transform: translateY(0%);
     
-    -moz-animation: scroll-text 6s ease infinite;
+    -moz-animation: scroll-text 6s ease forwards;
     -moz-animation-delay: 0.5s;
-    -webkit-animation: scroll-text 6s ease infinite;
+    -webkit-animation: scroll-text 6s ease forwards;
     -webkit-animation-delay: 0.5s;
-    animation: scroll-text 6s ease infinite;
+    animation: scroll-text 6s ease forwards;
     animation-delay: 0.5s;
   }
   
