--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block extraheader %}
+{% endblock extraheader %}
+
 {% block content %}
 <h1>Welcome to Nexus, <span class="text-emphasis">{{ user.username }}</span>!</h1> <!-- header message -->
 {% for message in messages %}
