--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -9,10 +9,11 @@
     font-size: min(12.5vh, 10vw);
     max-width: 100vw;
     row-gap: 0px;
+    height: min(12.5vh, 10vw);
 }
 
 #word-container {
-  height: 100px;
+  height: inherit;
   flex-wrap: wrap;
   row-gap: 0px;
 }
@@ -21,14 +22,14 @@
   display: flex;
   flex-direction: row;
   max-width: fit-content;
-  height: 100px;
+  height: inherit;
   flex-wrap: wrap;
   row-gap: 0px;
+  color: var(--primary-font-color);
 }
 
 #scroll-word-container {
-    height: 100px;
-    color: white;
+    height: inherit;
     overflow: hidden;
 }
 
@@ -42,12 +43,14 @@
     -webkit-transform: translateY(0%);
     transform: translateY(0%);
     
-    -moz-animation: scroll-text 6s ease forwards;
-    -moz-animation-delay: 0.5s;
-    -webkit-animation: scroll-text 6s ease forwards;
-    -webkit-animation-delay: 0.5s;
-    animation: scroll-text 6s ease forwards;
-    animation-delay: 0.5s;
+    -moz-animation: scroll-text 6s ease-out forwards;
+    /* -moz-animation-delay: 0.1s; */
+    -webkit-animation: scroll-text 6s ease-out forwards;
+    /* -webkit-animation-delay: 0.1s; */
+    animation: scroll-text 6s ease-out forwards;
+    /* animation-delay: 0.1s; */
+
+    animation-play-state: paused;
   }
   
   /* for Firefox */
@@ -75,3 +78,7 @@
     }
 
   }
+
+.start-animation #scroll-text {
+  animation-play-state: running;
+}
