--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block extraheader %}
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/contact.css') }}">
 {% endblock extraheader %}
 
 {% block content %}
