--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,31 +5,34 @@
 {% endblock extraheader %}
 
 {% block content %}
-<h1>Sign in <span class="text-background">to</span><span class="text-emphasis"> Nexus Web</span></h1>
+<h1>Sign in <span class="text-background">to</span><span class="text-emphasis"> Nexus</span></h1>
 
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }} <!-- security: csurf protection -->
 
     <div class="form-field">
-        {{ form.username(placeholder="Phone number, email, or username", class_="form-item") }}
+        <div class="form-item-container">{{ form.username(placeholder="Phone number, email, or username", class_="form-item") }}</div>
+            
+            {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
 
-        {% for error in form.username.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
+        <div class="form-item-container">{{ form.password(placeholder="Password", class_="form-item") }}</div>
+            
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
 
-        {{ form.password(placeholder="Password", class_="form-item") }}
-
-        {% for error in form.password.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-
-        <div class="toggle-switch-container">
-            {{ form.remember_me() }} {{ form.remember_me.label }}
+        <div class="form-item-container">
+            <div class="toggle-switch-container">
+                {{ form.remember_me() }} {{ form.remember_me.label }}
+            </div>
         </div>
 
-    <p>{{ form.next(style="padding: 10px;", class_="form-item") }}
-        {{ form.submit(style="padding: 10px;", class_="form-item") }}
-    </p>
+
+        <div class="form-item-container">{{ form.next(style="padding: 10px;", class_="form-item") }}
+            {{ form.submit(style="padding: 10px;", class_="form-item") }}
+        </div>
     </div>
 </form>
 
