--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
 {% block extraheader %}
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/welcome.css') }}">
 {% endblock extraheader %}
 
 {% block content %}
 <h1>Welcome to Nexus, <span class="text-emphasis">{{ user.username }}</span>!</h1> <!-- header message -->
-{% for message in messages %}
-<div><p>{{ message.author.username }} says: <b>{{ message.body }}</b></p></div> <!-- displaying all messages -->
-{% endfor %}
+
 {% endblock content %}
