--- a/app/templates/webapp.html
+++ b/app/templates/webapp.html
@@ -5,7 +5,7 @@
 {% endblock extraheader %}
 
 {% block content %}
-<h1>Nexus Online</h1>
+<h1><span class="text-emphasis">Nexus</span> Online</h1>
 {% for message in messages %}
 <div><p>{{ message.author.username }} says: <b>{{ message.body }}</b></p></div> <!-- displaying all messages -->
 {% endfor %}
