--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -5,6 +5,6 @@
 {% endblock extraheader %}
 
 {% block content %}
-<h1>Welcome to Nexus, <span class="text-emphasis">{{ user.username }}</span>!</h1> <!-- header message -->
+<h1>Hello, <span class="text-emphasis">{{ user.username }}</span>.</h1> <!-- header message -->
 
 {% endblock content %}
