--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,7 +30,8 @@
         </div>
 
 
-        <div class="form-item-container">{{ form.next(style="padding: 10px;", class_="form-item") }}
+        <div class="form-item-container">
+            {{ form.next(style="padding: 10px;", class_="form-item") }}
             {{ form.submit(style="padding: 10px;", class_="form-item") }}
         </div>
     </div>
