--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,12 +1,12 @@
 :root {
     --accent-color: #89BFF0;
-    --accent-color-2: #9e9e9e;
+    --accent-color-2: #acacac;
     --accent-color-darker: #7D9FF0;
-    --border-color: #9e9e9e;
+    --border-color: #acacac;
     --primary-font-color: #ffffff;
     --secondary-font-color: #acacac;
     --background-color: #3b3b3b;
-    --background-gradient: linear-gradient(to top, rgba(137,191,240,1) 0%, rgba(59,59,59,1) 100%);
+    --background-gradient: linear-gradient(to top, #89bff0 0%, #3b3b3b 100%);
     --button-hover-color: #5a5946;
     --rounding: 10px;
     --font-body: "Outfit", sans-serif;
@@ -31,7 +31,8 @@ h1 {
     margin-left: 1%;
     margin-right: 1%;
     font-size: min(12.5vh, 10vw);
-    letter-spacing: -2px;
+    font-feature-settings: "liga" 0;
+    letter-spacing: -0.04em;
 }
 
 .text-emphasis {
@@ -62,7 +63,6 @@ body {
     margin-bottom: 0;
     background-color: var(--accent-color);
     border-radius: 20px;
-    padding-bottom: auto;
     margin-left: 1%;
     margin-right: 1%;
 }
@@ -85,5 +85,5 @@ body {
 
 .nav-button:hover {
     background-color: var(--accent-color-darker);
-    inset: bottom var(--button-hover-color)
+    inset: var(--button-hover-color)
 }
