--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -16,10 +16,17 @@ form{
 }
 
 .form-field {
-    border: solid white;
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.form-item-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    margin: 5px;
 }
 
 .form-item { 
@@ -33,8 +40,7 @@ form{
     /* border: solid var(--border-color); */
     border: none;
 
-    width: auto;
-    margin: 5px;
+    width: 100%;
     padding: 5px;
     transition: 0.4s ease;
     cursor: pointer;
@@ -49,11 +55,11 @@ form{
 }
 
 #password-entry {
-    visibility: hidden;
+    visibility: visible;
 }
 
 #submit-entry {
-    visibility: hidden;
+    visibility: visible;
 }
 
 #next-entry {
@@ -66,7 +72,7 @@ form{
     align-items: center;
     gap: 10px;
     margin: 10px 0;
-    visibility: hidden;
+    visibility: visible;
 }
 
 /* Hide the default checkbox appearance */
