--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,20 +13,25 @@
     });
 </script>
 
-<div class="text-emphasis">Nexus.</div>
-<div id="title-container">
-    Messaging&nbsp<div id="word-container">made&nbsp</div>
-    <div id="sub-word-container">
-        <div id="word-container">more</div>
-        <div id="scroll-word-container">
-            <div id=scroll-text>
-                &nbspsecure.<br>
-                &nbspsimple.<br>
-                &nbspsmart.<br>
-                .
+<div id="full-container">
+    <div id="title-container">
+        <span class="text-emphasis">Nexus.&nbsp</span>
+    <!-- </div> -->
+    <!-- <div id="title-container"> -->
+        Communication,&nbsp<div id="word-container">made&nbsp</div>
+        <div id="sub-word-container">
+            <div id="word-container">more</div>
+            <div id="scroll-word-container">
+                <div id=scroll-text>
+                    &nbspsecure.<br>
+                    &nbspsimple.<br>
+                    &nbspsmart.<br>
+                    .
+                </div>
             </div>
         </div>
     </div>
 </div>
 </h1>
+
 {% endblock content%}
