--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -1,35 +1,51 @@
+#full-container {
+  display: flex;
+  flex-direction: row;
+  row-gap: 0px;
+  height: auto;
+  align-content: flex-start;
+  /* border: green dashed; */
+}
+
 #title-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: left;
     justify-content: left;
+    align-content: flex-start;
 
     color: var(--secondary-font-color);
     font-size: min(12.5vh, 10vw);
     max-width: 100vw;
     row-gap: 0px;
     height: min(12.5vh, 10vw);
+    /* border: green solid; */
+    margin-bottom: 0;
+    align-items: last baseline;
 }
 
 #word-container {
   height: inherit;
   flex-wrap: wrap;
   row-gap: 0px;
+  /* border: yellow solid; */
 }
 
 #sub-word-container {
   display: flex;
   flex-direction: row;
   max-width: fit-content;
-  height: inherit;
+  /* height: calc(min(12.5vh, 10vw) * 0.75); */
   flex-wrap: wrap;
   row-gap: 0px;
   color: var(--primary-font-color);
+  /* border: black solid; */
+  margin-top: -1vh;
+  align-items: last baseline;
 }
 
 #scroll-word-container {
-    height: inherit;
+    height: min(12.5vh, 10vw);
     overflow: hidden;
 }
 
