--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -51,7 +51,6 @@ body {
     padding: 0;
     margin: 0;
     color: var(--primary-font-color);
-    /* background-color: var(--background-colour); */
 }
 
 #nav-bar {
@@ -66,6 +65,7 @@ body {
     margin-left: 1%;
     margin-right: 1%;
     height: fit-content;
+    /* position: fixed; */
 }
 
 .nav-button {
