--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,6 @@
 {% endblock extraheader %}
 
 {% block content %}
-<h1> <!-- header message -->
 <script>
     // Wait until the page is fully loaded, then add the "start-animation" class to <body>
     window.addEventListener('load', () => {
@@ -13,25 +12,36 @@
     });
 </script>
 
-<div id="full-container">
-    <div id="title-container">
-        <span class="text-emphasis">Nexus.&nbsp</span>
-    <!-- </div> -->
-    <!-- <div id="title-container"> -->
-        Communication,&nbsp<div id="word-container">made&nbsp</div>
-        <div id="sub-word-container">
-            <div id="word-container">more</div>
-            <div id="scroll-word-container">
-                <div id=scroll-text>
-                    &nbspsecure.<br>
-                    &nbspsimple.<br>
-                    &nbspsmart.<br>
-                    .
+<div id="page-container">
+    <h1>
+        <div class="title-container"><span class="text-emphasis">Nexus.</span></div>
+        <div class="title-container">
+            Communication,&nbsp
+            <div id="word-container">made&nbsp</div>
+            <div id="sub-word-container">
+                <div id="word-container">more</div>
+                <div id="scroll-word-container">
+                    <div id="scroll-text">
+                        &nbspsecure.<br>
+                        &nbspsimple.<br>
+                        &nbspsmart.<br>
+                        .
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-</h1>
+    </h1>
 
+    <!-- <div id="body-container">
+        <br>
+        <br>
+        <br>
+        <br>
+        hello xx<br>
+        willy bum <br>
+        bum bum<br>
+        bum
+    </div> -->
+
+</div>
 {% endblock content%}
